--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
         /* Style de l'image d'invitation */
         #invite-image {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
+            top: 50%;
+            left: 50%;
+            width: 350px;
             height: auto;
+            transform: translate(-50%, -50%);
             cursor: pointer;
             z-index: 1;
         }
