--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
             text-align: center;
         }
 
+        /* Style du texte clignotant "Clic" */
+        #click-text {
+            position: fixed;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 24px;
+            font-weight: bold;
+            color: #333;
+            animation: blink 1s infinite;
+            z-index: 3;
+            display: none;
+        }
+
+        @keyframes blink {
+            0%, 50%, 100% { opacity: 1; }
+            25%, 75% { opacity: 0; }
+        }
+
         /* Style de l'image d'invitation */
         #invite-image {
             position: fixed;
@@ -89,11 +108,12 @@
         #card-video {
             display: none;
             position: fixed;
-            top: 0;
-            left: 0;
+            top: 45%; /* Ajustement vertical pour centrer */
+            left: 50%;
             width: 100vw;
-            height: 100vh;
+            height: 90vh; /* Ajustement de la hauteur pour mieux remplir l'écran */
             object-fit: contain;
+            transform: translate(-50%, -50%);
             z-index: 1;
         }
 
@@ -102,8 +122,8 @@
             display: none; /* Masqué jusqu'à la fin de la vidéo */
             flex-direction: column;
             align-items: center;
-            margin-top: 100px;
             position: relative;
+            margin-top: 200px; /* Ajustement vertical pour centrer les boutons */
             z-index: 1;
         }
 
@@ -128,6 +148,9 @@
     <div id="loading-screen">
         <div id="loading-circle"></div>
     </div>
+
+    <!-- Texte clignotant "Clic" -->
+    <div id="click-text">Clic</div>
 
     <!-- Contenu principal -->
     <div id="content">
@@ -167,6 +190,7 @@
         let audio = new Audio('musique.mp3');
         let cardVideo = document.getElementById('card-video');
         let inviteImage = document.getElementById('invite-image');
+        let clickText = document.getElementById('click-text');
         let clickCount = 0;
         let pauseTimes = [4, 6, 13, 15, 23]; // Points de pause pour la vidéo
         let initialClick = true; // Contrôle du premier clic entre image et vidéo
@@ -187,6 +211,7 @@
             cardVideo.pause(); // La vidéo est en pause à 0s
             cardVideo.currentTime = 0;
             initialClick = false; // Désactiver l'initialisation après le premier clic
+            showClickText(); // Afficher le texte "Clic"
         }
 
         // Fonction pour la musique
@@ -201,6 +226,16 @@
             }
         }
 
+        // Fonction pour afficher le texte clignotant "Clic"
+        function showClickText() {
+            clickText.style.display = 'block';
+        }
+
+        // Fonction pour masquer le texte clignotant "Clic"
+        function hideClickText() {
+            clickText.style.display = 'none';
+        }
+
         // Fonction pour le chargement de la page
         window.addEventListener('load', () => {
             document.getElementById('loading-screen').style.display = 'none';
@@ -212,12 +247,15 @@
         cardVideo.addEventListener('click', () => {
             if (initialClick) return; // Ne rien faire si on est au premier clic pour passer de l'image à la vidéo
             
+            hideClickText(); // Masquer le texte "Clic" après un clic
+            
             if (clickCount < pauseTimes.length) {
                 cardVideo.play();
                 cardVideo.ontimeupdate = () => {
                     if (cardVideo.currentTime >= pauseTimes[clickCount]) {
                         cardVideo.pause();
                         clickCount++;
+                        showClickText(); // Afficher le texte "Clic" chaque fois que la vidéo se met en pause
                     }
                 };
             } else {
@@ -225,6 +263,7 @@
                 cardVideo.onended = () => {
                     cardVideo.style.display = 'none';
                     document.getElementById('action-buttons').style.display = 'flex';
+                    hideClickText(); // Masquer le texte "Clic" à la fin de la vidéo
                 };
             }
         });
