--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
             text-align: center;
         }
 
-        /* Style du texte clignotant "Clic" */
-        #click-text {
+        /* Style de la flèche clignotante */
+        #arrow-right {
             position: fixed;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 24px;
-            font-weight: bold;
-            color: #a1814b; /* Nouvelle couleur */
-            animation: blink 2s infinite; /* Réduction de la fréquence de clignotement */
+            top: 50%;
+            right: 20px;
+            transform: translateY(-50%);
+            font-size: 36px;
+            color: #a1814b; /* Couleur de la flèche */
+            animation: blink 2s infinite; /* Animation de clignotement lent */
             z-index: 3;
             display: none;
+            font-family: Arial, sans-serif;
         }
 
         @keyframes blink {
@@ -149,8 +149,8 @@
         <div id="loading-circle"></div>
     </div>
 
-    <!-- Texte clignotant "Clic" -->
-    <div id="click-text">Clic</div>
+    <!-- Flèche clignotante -->
+    <div id="arrow-right">➔</div>
 
     <!-- Contenu principal -->
     <div id="content">
@@ -190,9 +190,9 @@
         let audio = new Audio('musique.mp3');
         let cardVideo = document.getElementById('card-video');
         let inviteImage = document.getElementById('invite-image');
-        let clickText = document.getElementById('click-text');
+        let arrowRight = document.getElementById('arrow-right');
         let clickCount = 0;
-        let pauseTimes = [4.3, 6, 13, 15, 23]; // Points de pause pour la vidéo
+        let pauseTimes = [4, 6, 13, 15, 23]; // Points de pause pour la vidéo
         let initialClick = true; // Contrôle du premier clic entre image et vidéo
 
         // Définir la vitesse de lecture de la vidéo
@@ -211,7 +211,7 @@
             cardVideo.pause(); // La vidéo est en pause à 0s
             cardVideo.currentTime = 0;
             initialClick = false; // Désactiver l'initialisation après le premier clic
-            showClickText(); // Afficher le texte "Clic"
+            showArrow(); // Afficher la flèche
         }
 
         // Fonction pour la musique
@@ -226,14 +226,14 @@
             }
         }
 
-        // Fonction pour afficher le texte clignotant "Clic"
-        function showClickText() {
-            clickText.style.display = 'block';
+        // Fonction pour afficher la flèche clignotante
+        function showArrow() {
+            arrowRight.style.display = 'block';
         }
 
-        // Fonction pour masquer le texte clignotant "Clic"
-        function hideClickText() {
-            clickText.style.display = 'none';
+        // Fonction pour masquer la flèche clignotante
+        function hideArrow() {
+            arrowRight.style.display = 'none';
         }
 
         // Fonction pour le chargement de la page
@@ -247,7 +247,7 @@
         cardVideo.addEventListener('click', () => {
             if (initialClick) return; // Ne rien faire si on est au premier clic pour passer de l'image à la vidéo
             
-            hideClickText(); // Masquer le texte "Clic" après un clic
+            hideArrow(); // Masquer la flèche après un clic
             
             if (clickCount < pauseTimes.length) {
                 cardVideo.play();
@@ -255,7 +255,7 @@
                     if (cardVideo.currentTime >= pauseTimes[clickCount]) {
                         cardVideo.pause();
                         clickCount++;
-                        showClickText(); // Afficher le texte "Clic" chaque fois que la vidéo se met en pause
+                        showArrow(); // Afficher la flèche chaque fois que la vidéo se met en pause
                     }
                 };
             } else {
@@ -263,7 +263,7 @@
                 cardVideo.onended = () => {
                     cardVideo.style.display = 'none';
                     document.getElementById('action-buttons').style.display = 'flex';
-                    hideClickText(); // Masquer le texte "Clic" à la fin de la vidéo
+                    hideArrow(); // Masquer la flèche à la fin de la vidéo
                 };
             }
         });
