--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
             Votre navigateur ne supporte pas la lecture de vidéos.
         </video>
 
-        <!-- Vidéo de la carte avec transparence (au format WebM) -->
-        <video id="card-video" src="card_animation.webm" type="video/webm" playsinline></video>
+        <!-- Vidéo de la carte (différente selon l'appareil) -->
+        <video id="card-video" playsinline></video>
 
         <!-- Boutons d'action (masqués au départ) -->
         <div id="action-buttons">
@@ -185,6 +185,11 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
     <script>
+        // Fonction pour détecter si l'appareil est sous iOS
+        function isIOS() {
+            return /iPhone|iPad|iPod/i.test(navigator.userAgent);
+        }
+
         // Variables pour contrôler l'état de la vidéo et la musique
         let isMusicPlaying = false;
         let audio = new Audio('musique.mp3');
@@ -195,8 +200,22 @@
         let pauseTimes = [4, 6, 13, 15, 23]; // Points de pause pour la vidéo
         let initialClick = true; // Contrôle du premier clic entre image et vidéo
 
-        // Définir la vitesse de lecture de la vidéo
-        cardVideo.playbackRate = 1.45;
+        // Définir la vidéo de la carte en fonction de l'appareil
+        window.addEventListener('load', () => {
+            if (isIOS()) {
+                // Si c'est un appareil iOS, charger la vidéo adaptée pour iOS
+                cardVideo.src = "card_animationios.webm";
+                cardVideo.type = "video/webm";
+            } else {
+                // Pour les autres appareils, charger la vidéo par défaut
+                cardVideo.src = "card_animation.webm";
+                cardVideo.type = "video/webm";
+            }
+            
+            document.getElementById('loading-screen').style.display = 'none';
+            document.getElementById('content').style.display = 'block';
+            cardVideo.currentTime = 0;
+        });
 
         // Fonction pour démarrer la transition avec effet de fondu
         function startTransition() {
@@ -235,13 +254,6 @@
         function hideArrow() {
             arrowRight.style.display = 'none';
         }
-
-        // Fonction pour le chargement de la page
-        window.addEventListener('load', () => {
-            document.getElementById('loading-screen').style.display = 'none';
-            document.getElementById('content').style.display = 'block';
-            cardVideo.currentTime = 0;
-        });
 
         // Contrôle de la vidéo au clic pour les points de pause
         cardVideo.addEventListener('click', () => {
