--- a/index.html
+++ b/index.html
@@ -104,15 +104,14 @@
             opacity: 1;
         }
 
-        /* Style de la vidéo de la carte pour occuper tout l’écran */
+        /* Style de la vidéo de la carte pour occuper toute la largeur de l’écran */
         #card-video {
             display: none;
             position: fixed;
-            top: 45%; /* Ajustement vertical pour centrer */
+            top: 50%;
             left: 50%;
             width: 100vw;
-            height: 90vh; /* Ajustement de la hauteur pour mieux remplir l'écran */
-            object-fit: contain;
+            height: auto; /* Conserver les proportions */
             transform: translate(-50%, -50%);
             z-index: 1;
         }
@@ -197,7 +196,7 @@
         let inviteImage = document.getElementById('invite-image');
         let arrowRight = document.getElementById('arrow-right');
         let clickCount = 0;
-        let pauseTimes = [4, 6, 13, 15, 23]; // Points de pause pour la vidéo
+        let pauseTimes = [4.3, 6, 13, 15, 23]; // Points de pause pour la vidéo
         let initialClick = true; // Contrôle du premier clic entre image et vidéo
 
         // Définir la vidéo de la carte en fonction de l'appareil
