--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             z-index: 3;
             display: none;
             font-family: Arial, sans-serif;
+            pointer-events: none; /* Permet de passer les clics à travers la flèche */
         }
 
         @keyframes blink {
@@ -104,7 +105,7 @@
             opacity: 1;
         }
 
-        /* Style de la vidéo de la carte pour occuper toute la largeur de l’écran */
+        /* Style de la vidéo de la carte pour occuper tout l’écran */
         #card-video {
             display: none;
             position: fixed;
@@ -196,7 +197,7 @@
         let inviteImage = document.getElementById('invite-image');
         let arrowRight = document.getElementById('arrow-right');
         let clickCount = 0;
-        let pauseTimes = [4.3, 6, 13, 15, 23]; // Points de pause pour la vidéo
+        let pauseTimes = [4, 6, 13, 15, 23]; // Points de pause pour la vidéo
         let initialClick = true; // Contrôle du premier clic entre image et vidéo
 
         // Définir la vidéo de la carte en fonction de l'appareil
@@ -279,25 +280,10 @@
             }
         });
 
-        // Fonction de concaténation des PDF et téléchargement
-        async function downloadInvitation() {
-            const pdf1Bytes = await fetch("invite.pdf").then(res => res.arrayBuffer());
-            const pdf2Bytes = await fetch("LoryaneNathanael.pdf").then(res => res.arrayBuffer());
-
-            const pdfDoc = await PDFLib.PDFDocument.create();
-            const pdf1 = await PDFLib.PDFDocument.load(pdf1Bytes);
-            const pdf2 = await PDFLib.PDFDocument.load(pdf2Bytes);
-
-            const pages1 = await pdfDoc.copyPages(pdf1, pdf1.getPageIndices());
-            pages1.forEach(page => pdfDoc.addPage(page));
-
-            const pages2 = await pdfDoc.copyPages(pdf2, pdf2.getPageIndices());
-            pages2.forEach(page => pdfDoc.addPage(page));
-
-            const mergedPdfBytes = await pdfDoc.save();
-            const blob = new Blob([mergedPdfBytes], { type: 'application/pdf' });
+        // Fonction de téléchargement sans concaténation
+        function downloadInvitation() {
             const link = document.createElement('a');
-            link.href = URL.createObjectURL(blob);
+            link.href = "LoryaneNathanael.pdf";
             link.download = "Invitation Mariage L&N.pdf";
             link.click();
         }
