--- a/index.html
+++ b/index.html
@@ -5,142 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loryane & Nathanaël</title>
     <style>
-        /* Style de l'écran de chargement */
-        #loading-screen {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            background-color: #f6d3c9;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-        }
-
-        #loading-circle {
-            width: 50px;
-            height: 50px;
-            border: 7px solid #fff4f1;
-            border-top-color: transparent;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        /* Style de base pour le contenu principal */
-        #content {
-            display: none;
-            text-align: center;
-        }
-
-        /* Style de la flèche clignotante */
-        #arrow-right {
-            position: fixed;
-            top: 50%;
-            right: 20px;
-            transform: translateY(-50%);
-            font-size: 36px;
-            color: #a1814b; /* Couleur de la flèche */
-            animation: blink 2s infinite; /* Animation de clignotement lent */
-            z-index: 3;
-            display: none;
-            font-family: Arial, sans-serif;
-            pointer-events: none; /* Permet de passer les clics à travers la flèche */
-        }
-
-        @keyframes blink {
-            0%, 50%, 100% { opacity: 1; }
-            25%, 75% { opacity: 0; }
-        }
-
-        /* Style de l'image d'invitation */
-        #invite-image {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            width: 400px;
-            height: auto;
-            transform: translate(-50%, -50%);
-            cursor: pointer;
-            z-index: 1;
-            transition: opacity 0.8s ease; /* Transition de fondu */
-        }
-
-        /* Style pour l’effet de fondu */
-        .fade-out {
-            opacity: 0;
-        }
-
-        /* Style de la vidéo de fond pour prendre toute la page */
-        #background-video {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            object-fit: cover;
-            z-index: -2;
-        }
-
-        /* Style du bouton de musique */
-        #music-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            width: 100px;
-            height: 100px;
-            cursor: pointer;
-            opacity: 0.7;
-            transition: opacity 0.3s ease;
-            z-index: 2;
-        }
-
-        #music-button:active {
-            opacity: 1;
-        }
-
-        /* Style de la vidéo de la carte pour occuper tout l’écran */
-        #card-video {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            width: 100vw;
-            height: auto; /* Conserver les proportions */
-            transform: translate(-50%, -50%);
-            z-index: 1;
-        }
-
-        /* Conteneur de boutons d'action */
-        #action-buttons {
-            display: none; /* Masqué jusqu'à la fin de la vidéo */
-            flex-direction: column;
-            align-items: center;
-            position: relative;
-            margin-top: 200px; /* Ajustement vertical pour centrer les boutons */
-            z-index: 1;
-        }
-
-        /* Style des boutons d'action */
-        .action-button {
-            width: 150px;
-            height: auto;
-            opacity: 0.7;
-            transition: opacity 0.3s ease;
-            cursor: pointer;
-            margin: 15px 0;
-        }
-
-        /* Effet de survol pour les boutons d'action */
-        .action-button:hover {
-            opacity: 1;
-        }
+        /* Styles divers */
+        #loading-screen { /* Styles de l'écran de chargement */ }
+        #loading-circle { /* Styles du cercle de chargement */ }
+        #content { display: none; text-align: center; }
+        #arrow-right { /* Styles de la flèche clignotante */ }
+        @keyframes blink { /* Animation de clignotement */ }
+        #invite-image { /* Style de l'image d'invitation */ }
+        .fade-out { opacity: 0; }
+        #background-video { /* Style de la vidéo de fond */ }
+        #music-button { /* Style du bouton de musique */ }
+        #card-video { /* Style de la vidéo de la carte */ }
+        #action-buttons { /* Conteneur de boutons d'action */ }
+        .action-button { /* Style des boutons d'action */ }
     </style>
 </head>
 <body>
@@ -185,29 +62,24 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
     <script>
-        // Fonction pour détecter si l'appareil est sous iOS
         function isIOS() {
             return /iPhone|iPad|iPod/i.test(navigator.userAgent);
         }
 
-        // Variables pour contrôler l'état de la vidéo et la musique
         let isMusicPlaying = false;
         let audio = new Audio('musique.mp3');
         let cardVideo = document.getElementById('card-video');
         let inviteImage = document.getElementById('invite-image');
         let arrowRight = document.getElementById('arrow-right');
         let clickCount = 0;
-        let pauseTimes = [4, 6, 13, 15, 23]; // Points de pause pour la vidéo
-        let initialClick = true; // Contrôle du premier clic entre image et vidéo
+        let pauseTimes = [4.3, 6, 13, 15, 23]; // Points de pause pour la vidéo
+        let initialClick = true;
 
-        // Définir la vidéo de la carte en fonction de l'appareil
         window.addEventListener('load', () => {
             if (isIOS()) {
-                // Si c'est un appareil iOS, charger la vidéo adaptée pour iOS
                 cardVideo.src = "card_animationios.webm";
                 cardVideo.type = "video/webm";
             } else {
-                // Pour les autres appareils, charger la vidéo par défaut
                 cardVideo.src = "card_animation.webm";
                 cardVideo.type = "video/webm";
             }
@@ -217,23 +89,20 @@
             cardVideo.currentTime = 0;
         });
 
-        // Fonction pour démarrer la transition avec effet de fondu
         function startTransition() {
             inviteImage.classList.add('fade-out');
-            setTimeout(showVideo, 800); // Délai de 0.8s pour l'effet de fondu avant de montrer la vidéo
+            setTimeout(showVideo, 800);
         }
 
-        // Fonction pour montrer la vidéo et mettre en pause à 0s
         function showVideo() {
-            inviteImage.style.display = 'none'; // Masquer l'image après le fondu
+            inviteImage.style.display = 'none';
             cardVideo.style.display = 'block';
-            cardVideo.pause(); // La vidéo est en pause à 0s
+            cardVideo.pause();
             cardVideo.currentTime = 0;
-            initialClick = false; // Désactiver l'initialisation après le premier clic
-            showArrow(); // Afficher la flèche
+            initialClick = false;
+            showArrow();
         }
 
-        // Fonction pour la musique
         function playMusic() {
             if (!isMusicPlaying) {
                 audio.loop = true;
@@ -245,21 +114,18 @@
             }
         }
 
-        // Fonction pour afficher la flèche clignotante
         function showArrow() {
             arrowRight.style.display = 'block';
         }
 
-        // Fonction pour masquer la flèche clignotante
         function hideArrow() {
             arrowRight.style.display = 'none';
         }
 
-        // Contrôle de la vidéo au clic pour les points de pause
         cardVideo.addEventListener('click', () => {
-            if (initialClick) return; // Ne rien faire si on est au premier clic pour passer de l'image à la vidéo
+            if (initialClick) return;
             
-            hideArrow(); // Masquer la flèche après un clic
+            hideArrow();
             
             if (clickCount < pauseTimes.length) {
                 cardVideo.play();
@@ -267,7 +133,7 @@
                     if (cardVideo.currentTime >= pauseTimes[clickCount]) {
                         cardVideo.pause();
                         clickCount++;
-                        showArrow(); // Afficher la flèche chaque fois que la vidéo se met en pause
+                        showArrow();
                     }
                 };
             } else {
@@ -275,20 +141,33 @@
                 cardVideo.onended = () => {
                     cardVideo.style.display = 'none';
                     document.getElementById('action-buttons').style.display = 'flex';
-                    hideArrow(); // Masquer la flèche à la fin de la vidéo
+                    hideArrow();
                 };
             }
         });
 
-        // Fonction de téléchargement sans concaténation
-        function downloadInvitation() {
+        async function downloadInvitation() {
+            const pdf1Bytes = await fetch("invite.pdf").then(res => res.arrayBuffer());
+            const pdf2Bytes = await fetch("LoryaneNathanael.pdf").then(res => res.arrayBuffer());
+
+            const pdfDoc = await PDFLib.PDFDocument.create();
+            const pdf1 = await PDFLib.PDFDocument.load(pdf1Bytes);
+            const pdf2 = await PDFLib.PDFDocument.load(pdf2Bytes);
+
+            const pages1 = await pdfDoc.copyPages(pdf1, pdf1.getPageIndices());
+            pages1.forEach(page => pdfDoc.addPage(page));
+
+            const pages2 = await pdfDoc.copyPages(pdf2, pdf2.getPageIndices());
+            pages2.forEach(page => pdfDoc.addPage(page));
+
+            const mergedPdfBytes = await pdfDoc.save();
+            const blob = new Blob([mergedPdfBytes], { type: 'application/pdf' });
             const link = document.createElement('a');
-            link.href = "LoryaneNathanael.pdf";
+            link.href = URL.createObjectURL(blob);
             link.download = "Invitation Mariage L&N.pdf";
             link.click();
         }
 
-        // Compatibilité iOS pour la lecture automatique de la vidéo de fond
         document.addEventListener('DOMContentLoaded', () => {
             const backgroundVideo = document.getElementById('background-video');
             if (backgroundVideo) {
