--- a/index.html
+++ b/index.html
@@ -184,23 +184,26 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
     <script>
+        // Fonction pour détecter si l'appareil est sous iOS
         function isIOS() {
             return /iPhone|iPad|iPod/i.test(navigator.userAgent);
         }
 
+        // Variables pour contrôler l'état de la vidéo et la musique
         let isMusicPlaying = false;
         let audio = new Audio('musique.mp3');
         let cardVideo = document.getElementById('card-video');
         let inviteImage = document.getElementById('invite-image');
         let arrowRight = document.getElementById('arrow-right');
         let clickCount = 0;
-        let pauseTimes = [4.3, 6, 13, 15, 23];
+        let pauseTimes = [4, 6, 13, 15, 23];
         let initialClick = true;
 
+        // Définir la vidéo de la carte en fonction de l'appareil
         window.addEventListener('load', () => {
             if (isIOS()) {
-                cardVideo.src = "card_animationios.hevc";
-                cardVideo.type = "video/mp4; codecs=hevc";
+                cardVideo.src = "card_animationios.mov";
+                cardVideo.type = "video/quicktime";
             } else {
                 cardVideo.src = "card_animation.webm";
                 cardVideo.type = "video/webm";
