--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             z-index: 9999;
         }
 
-        /* Style du cercle de chargement avec le logo en arrière-plan */
+        /* Style du cercle de chargement avec l'image logo en arrière-plan */
         #loading-circle {
-            width: 50px;
-            height: 50px;
-            border: 7px solid #fff4f1;
+            width: 70px;
+            height: 70px;
+            border: 5px solid #fff4f1;
             border-top-color: transparent;
             border-radius: 50%;
             animation: spin 1s linear infinite;
-            background-image: url('logo.png'); /* Assurez-vous que le chemin est correct */
-            background-size: 70%;
+            background-image: url('logo.png'); /* Assurez-vous que le chemin du logo est correct */
+            background-size: 60%;
             background-repeat: no-repeat;
             background-position: center;
         }
