--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@
         let inviteImage = document.getElementById('invite-image');
         let arrowRight = document.getElementById('arrow-right');
         let clickCount = 0;
-        let pauseTimes = [4, 6, 13, 15, 23];
+        let pauseTimes = [4.3, 6, 13, 15, 23];
         let initialClick = true;
 
         // Définir la vidéo de la carte en fonction de l'appareil
         window.addEventListener('load', () => {
             if (isIOS()) {
-                cardVideo.src = "card_animationios.mov";
-                cardVideo.type = "video/mov";
+                cardVideo.src = "card_animationios.mp4";
+                cardVideo.type = "video/mp4";
             } else {
                 cardVideo.src = "card_animation.webm";
                 cardVideo.type = "video/webm";
