--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
         // Définir la vidéo de la carte en fonction de l'appareil
         window.addEventListener('load', () => {
             if (isIOS()) {
-                cardVideo.src = "card_animationios.mov";
-                cardVideo.type = "video/mov";
+                cardVideo.src = "card_animationios.mp4";
+                cardVideo.type = "video/mp4";
             } else {
                 cardVideo.src = "card_animation.webm";
                 cardVideo.type = "video/webm";
