--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
             if (isIOS()) {
                 cardVideo.src = "card_animationios.mp4";
                 cardVideo.type = "video/mp4";
+                pauseTimes = [3, 6, 7, 10.5]; // Timeline spécifique pour iPhone
             } else {
                 cardVideo.src = "card_animation.webm";
                 cardVideo.type = "video/webm";
